Fix content overflowing

--- a/_sass/_content.sass
+++ b/_sass/_content.sass
@@ -1,10 +1,9 @@
-#content
+#content, #content-full-width
   box-sizing: border-box
   width: 100%
-  max-width: 40em
-  align-self: center
+  overflow-x: hidden
   padding: 0 1rem
 
-#content-full-width
-  box-sizing: border-box
-  padding: 0 1rem
+#content
+  max-width: 40em
+  align-self: center
